@@ -5,16 +5,18 @@ DIST plowshare-1.0.0.tar.gz 231640 SHA256 35d70ac066f9ab1b9a322bd4b6ff4263e6ba62
 DIST plowshare-1.0.2.tar.gz 240513 SHA256 c02c650815b58ce9a81637a0ed41de1da5d5cd483f96b4e806afa3fb0e440eef SHA512 f0bbd5fdbe84e10e1574b53c9571a996edab3453b02a6dcd8ca44ebb28d429cd6dc04ca9b4aa5ebe82bcdebe943dd51c6bd61149dae6d7f9832e471e65f9834c WHIRLPOOL 8e763ea6267e5fe219414ff3397283fde2ea07118316f0ef128dcf4a31f2d4a1a2728dabdd65cc3b81acbfbbe7fe4e173ee5264f166359ec36faf5edcc44fbe4
 DIST plowshare-1.0.4.tar.gz 243024 SHA256 f5e6fcdb4e15d097991881ed7b7c0c7063379bfb0bf6c41136de9bbd92be7c57 SHA512 143fe5b260d5917e3c7e48cbcd6322a0639db341043ddc34ddb85da3f0fd5f1453d19c42a7b698ee58cd5bc17e3fd4a32baf7193524540c5bca5ebf7cd5194ea WHIRLPOOL 295f8d85b87c69c70377a54d7d888675cc7f530c07d09019496a7e5cf29b1b4dea1eeb2d7e0a5c2fc865bde3dd54ded58ad8fa03c6710255a54f207abf79aff0
 DIST plowshare-1.0.6.tar.gz 247343 SHA256 6d30c1d6fd913830107a8bbc7577fdce73e409b16a2505443a5c112900abeb71 SHA512 6cc38e1732e3d8b4b7cdd099dfca3a0608c7a165a063a53f8db645f23586b4e75e58aff9195f2d7b86a3fee89144976fe4e8ca0c1809e68b2854f7bbe02761bd WHIRLPOOL fa88dd84a195070382fa919a94fb991f4d52a249a00bb31b15d55c29016e9a64f7f5462bcbbfecc19f1f40a3ba83dd977088cefbcd692034906f0c843b5869c7
+DIST plowshare-1.2.0.tar.gz 253572 SHA256 0f1ff5d2986334209389857d6c6f3f63162d661b28687747ae1a8612f3e5d678 SHA512 5fd8eeef5a4d6a42d03a858b451fa2ac121e0dbdcdb2f2981cef6660b0972e44396e3b8b3d9eb5b36ca8ce0aacda7df8f193ba4e5464c1f96a4c8ff2c104ff9a WHIRLPOOL 0009dc91d9a0fc15083c781fa6a73f46f966af673d20cf8897bb786f2337a36a75a0dae55dd2109f88d4e1a57578824763b1f79ae7949d497e9a9136ad2d2632
 EBUILD plowshare-1.0.0.ebuild 1928 SHA256 f94703306aab60ea88ce280c89da138738e4c3a710f814dce7a196a0f04f21d7 SHA512 f7ae5fd4fdc523bb61ff3437d47e2099fadb59ec50d74121df3e12aa5dad9cb8e985616848b1d84e9c5965e5950e761f9300946b6c2ad3aa6ccefcafa1b1799b WHIRLPOOL bc8ac957096d4793abe42c323b96b80ed83beb583ffd15018e1d1fdd223c797533ea0c17cd70df8e37fb1d0ca35a59c6a60625807689fa0c499d5d5e21ebea39
 EBUILD plowshare-1.0.2.ebuild 2035 SHA256 b306b2388ac17d5945b8ea124eeff82ae8082cfc6208404f0390a24dc3969152 SHA512 7e71e5e0a74cc4bc761dc6a9f1394ddf2b2c37c33fef09b10fc8efe0de8d278c10cab40b4deb431ead048d85cb69184b689bc4b036d2e5de6cc9636dc4e85e89 WHIRLPOOL b25edae978df863ff084a9cf9c8064c8844d411bd9c90f9161cbf1dc907702842940697779c76e9190edd8a005fbb55fb525e8e9d85d2bcbd0da0c074ee6819b
 EBUILD plowshare-1.0.4.ebuild 2035 SHA256 d86396382025204d6b1740326791340fc700a586e6791986750cbdb1f0c677c0 SHA512 636ae50a527eeda566a192c5d5761e35238944e36de09eb0286b276cf4336effcea61e7058ae8e72431f6a38df953ab0c15a6cb6d19f08ccbe1745bb4d1a2d58 WHIRLPOOL 92562c3143e9efe82bf14bf6e8c30d0a8a741f03c2982d12ecede3c52a7ca5d6a31249e7b6a4a261ff15514816cc1e64741c658d8bfafdbeb2f24239e35705bf
 EBUILD plowshare-1.0.6.ebuild 2026 SHA256 ecf029d97c87eb9fbb8654c9048c4ad261fb45dfc1f77e5eb4869d0e51517d98 SHA512 648c57d6a95e1b984884123aed6cef693f47bbe9a61f6f1216fbc08c5370164104405e9a0a1041036927018d992fa795a70b192f2e6795c9bf983b83c1b10f6a WHIRLPOOL d022a51b0c3d863a92e52987781fc93c9fb68298f7557f0bb8338c0edb498b22e4315d89d07672e36eedbd3ac1023d98d3315e7391b76177dea2e84d3d68c8c7
-MISC ChangeLog 5206 SHA256 302779360fb2c1997a9b53c15b73f55b8574042f213df8616e9d8e6621740bee SHA512 3d67b6b8b638b348b291d01f2e4ba26ad2a378437e87b64574c5cea9462f1e81be6b9ff413c9c3756239f59feeff153eeb5ce15b4663c0ee5e86d1ec1ee89709 WHIRLPOOL 3dc3c86bd195036bd1c60e113f1144d3303ee5eaa58d16ef64d9ad487b72d399ec5588707e3b5841ceb41fddaa0ba538c1556b5f93ec7d7ee0c52d1592d5b1f7
+EBUILD plowshare-1.2.0.ebuild 2047 SHA256 f727780b635a804652fc365d5f7063c7e765817f9e204aaa4476c1433653729b SHA512 b2d3df7d603d29ae3cfff44a5aae23b381b1c6372fc9955d7dc0ebb1d826516e66814d3e51d6b185237d0b22f529474ec5d8d50afb4674178d64909c93a7272d WHIRLPOOL fc86358c385cc04d4e67752559569305c6f497a449e6b7986965059cb55ba2477ce2582c407ed74c6458f986137bb7ef22c614d51508e5526f15b905eea3544b
+MISC ChangeLog 5334 SHA256 689c623fe667638676b3ba12cddc04fa77cf39dc3a3866fd9a11156b30524e3e SHA512 cfe97934d870e8700cb26363f48d69e42d3e54cdcd431c164593684a7198321cc79b3f52109b69bd1ce5a2f05af617ad33b40bb9009f57c0f73e5bab56607628 WHIRLPOOL 92e5f5e9ce5ba51313fd932e187e38cc6ecf7c364bc3a1b26f6de8651d70736cdc5e0cd7708089bc21eb808215c7a68cee593a883c1ef63f2b30601776191a81
 MISC metadata.xml 391 SHA256 0d84ff17ddcac86660638e3eccc9eb69956b5ce9ced3a897b34f5db2b78e1611 SHA512 8ae0c9684e38f584dccb31aa3928de21db622b52938827e1e0cb45778eb400085351ac278bfa79443cb5a1d64152bcc15a018eaa7ff6032a13c74286d448953f WHIRLPOOL 3e2dfd4ed24600e953efc0004e05cb73851d8875346146d1270aa84ca6d0ef23d4e33c3570ac053ff0ddfca0a9b5f99c22970489f558ded75c0e65e6e51b6876
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlROHfYACgkQFYEBGcdFJfI2tAEAmn86ZCUD72DkDuZDW+KsA2Uo
-EqDAffHTs9fwZ1xQZNYBAJy/wReHeWkNQmo9jdurAvyBjIDGxNAX8KpPgZiPKPHu
-=l/4T
+iF4EAREIAAYFAlTQ3aAACgkQFYEBGcdFJfKoSQD8DQBnz3e7x3j9HlYTW78R95LF
+KyT6EQ76bFWVEvIUwjkBAIKuNfQuy9bJe7bOzmEYef+/uIuRj4wKZkjYE3I4pRWP
+=kThA
 -----END PGP SIGNATURE-----
